--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(untitled8)
+project(stream_analysis)
 
 set(CMAKE_CXX_STANDARD 20)
 
@@ -7,7 +7,7 @@ find_package(OpenCV REQUIRED)
 
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-add_executable(untitled8 main.cpp
-        main.hpp
+add_executable(stream_analysis stream_analysis.cpp
+        stream_analysis.hpp
 )
-target_link_libraries(untitled8 ${OpenCV_LIBS})
+target_link_libraries(stream_analysis ${OpenCV_LIBS})
