major project refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,14 @@ find_package(OpenCV REQUIRED)
 
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-add_executable(stream_analysis stream_analysis.cpp
-        stream_analysis.hpp
+add_executable(stream_analysis main.cpp
+        stream_analyzer.hpp
+        config.hpp
+        metrics.hpp
+        frame_analysis.hpp
+        config.cpp
+        metrics.cpp
+        frame_analysis.cpp
+        stream_analyzer.cpp
 )
 target_link_libraries(stream_analysis ${OpenCV_LIBS})
