moved hardware acceleration options to the config, removed artifact detectiond logic as it needs refinement, added max log count option in config

--- a/config/config_local2.json
+++ b/config/config_local2.json
@@ -1,7 +1,9 @@
 {
-  "url": "udp://192.168.0.7:1235",
+  "url": "",
   "color_ranges_path": "./color_ranges.json",
   "corrupted_frames_path": "./corrupted_frames/",
+  "hardware_acceleration":  3,
+  "max_log_number": 1000,
   "interval": 30,
   "thresholds": {
     "static_frame_threshold": 0.1,
