--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 test_samples
-/cmake-build-debug/corrupted_frames
-/cmake-build-debug/coverage
+/cmake-build-debug/
+/config/config.json
+/config/config_local2.json
