--- a/config/config_local.json
+++ b/config/config_local.json
@@ -1,5 +1,5 @@
 {
-  "url": "",
+  "url": "rtp://@233.3.4.180:4180",
   "color_ranges_path": "./color_ranges.json",
   "corrupted_frames_path": "./corrupted_frames/",
   "hardware_acceleration":  3,
