--- a/config/config.json
+++ b/config/config.json
@@ -4,6 +4,7 @@
   "hardware_acceleration":  3,
   "max_log_number": 1000,
   "interval": 30,
+  "output_to_console": false,
   "thresholds": {
     "static_frame_threshold": 0.06,
     "coloured_stripes_threshold": 85,
