--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,12 @@
 {
   "url": "rtp://@233.3.4.98:4098",
   "color_ranges_path": "/home/gio/CLionProjects/untitled8/color_ranges/color_ranges.json",
-  "api_backend":1900 ,
-  "hardware_acceleration":  0,
+  "api_backend": 1900,
+  "hardware_acceleration": 0,
+  "process_every_nth_frame": 4,
   "max_log_number": 1000,
   "interval": 30,
-  "output_to_console": false,
+  "output_to_console": true,
   "thresholds": {
     "static_frame_threshold": 0.05,
     "coloured_stripes_threshold": 85,
@@ -13,6 +14,6 @@
     "black_frame_threshold": 15
   },
   "size_parameters": {
-    "max_mean_buffer_size": 30
+    "max_mean_buffer_size": 15
   }
 }
