--- a/config/configs.json
+++ b/config/configs.json
@@ -17,7 +17,7 @@
                 "coloured_stripes_threshold": 85.0,
                 "static_frame_threshold": 0.05
             },
-            "url": "udp://237.7.7.178:17178"
+            "url": "https://tv.cdn.xsg.ge/gpb-1tv/tracks-v1a1/mono.m3u8"
         },
         {
             "api_backend": 1900,
