--- a/config/config.json
+++ b/config/config.json
@@ -6,7 +6,7 @@
   "process_every_nth_frame": 4,
   "max_log_number": 1000,
   "interval": 30,
-  "output_to_console": true,
+  "output_to_console": false,
   "thresholds": {
     "static_frame_threshold": 0.05,
     "coloured_stripes_threshold": 85,
