--- a/program_config/program_config.json
+++ b/program_config/program_config.json
@@ -3,6 +3,7 @@
   "hardware_acceleration": 0,
   "interval": 30,
   "output_to_console": false,
+  "save_last_frame": true,
   "process_every_nth_frame": 4,
   "size_parameters": {
     "max_mean_buffer_size": 15
