implemented ffmpeg wrapper for opening and processing video streams

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,13 @@ set(CMAKE_CXX_STANDARD 20)
 find_package(OpenCV REQUIRED)
 
 include_directories(
+        ${FFMPEG_INCLUDE_DIRS}
         ${OpenCV_INCLUDE_DIRS}
         include
 )
+
+
+add_definitions(${FFMPEG_CFLAGS_OTHER})
 
 set(SOURCE_FILES
         src/main.cpp
@@ -26,6 +30,8 @@ set(HEADER_FILES
         include/frame_analysis.hpp
         include/threading.hpp
         include/helpers.hpp
+        src/frame.cpp
+        include/frame.hpp
 )
 
 add_executable(stream_analysis
@@ -35,5 +41,6 @@ add_executable(stream_analysis
 
 target_link_libraries(stream_analysis
         ${OpenCV_LIBS}
+        ${FFMPEG_LIBRARIES}
         pthread
 )
