--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,18 @@
 cmake_minimum_required(VERSION 3.10)
 project(stream_analysis)
 
+# Set C++ standard
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+find_package(PkgConfig REQUIRED)
 
 find_package(OpenCV REQUIRED)
 
 include_directories(
-        ${FFMPEG_INCLUDE_DIRS}
         ${OpenCV_INCLUDE_DIRS}
         include
 )
-
-
-add_definitions(${FFMPEG_CFLAGS_OTHER})
 
 set(SOURCE_FILES
         src/main.cpp
@@ -21,7 +21,11 @@ set(SOURCE_FILES
         src/frame_analysis.cpp
         src/stream_analyzer.cpp
         src/helpers.cpp
+        src/capture.cpp
+        src/ffmpeg_capture.cpp
+        src/gstreamer_capture.cpp
 )
+
 
 set(HEADER_FILES
         include/stream_analyzer.hpp
@@ -30,8 +34,10 @@ set(HEADER_FILES
         include/frame_analysis.hpp
         include/threading.hpp
         include/helpers.hpp
-        src/frame.cpp
-        include/frame.hpp
+        include/ffmpeg_capture.hpp
+        include/icapture.hpp
+        include/capture.hpp
+        include/gstreamer_capture.hpp
 )
 
 add_executable(stream_analysis
@@ -41,6 +47,19 @@ add_executable(stream_analysis
 
 target_link_libraries(stream_analysis
         ${OpenCV_LIBS}
-        ${FFMPEG_LIBRARIES}
         pthread
 )
+
+pkg_check_modules(FFMPEG libavformat libavcodec libavutil)
+if (FFMPEG_FOUND)
+    include_directories(${FFMPEG_INCLUDE_DIRS})
+    target_link_libraries(stream_analysis ${FFMPEG_LIBRARIES})
+    target_compile_definitions(stream_analysis PRIVATE FFMPEG_ENABLED)
+endif()
+
+pkg_check_modules(GSTREAMER gstreamer-1.0 gstreamer-video-1.0)
+if (GSTREAMER_FOUND)
+    include_directories(${GSTREAMER_INCLUDE_DIRS})
+    target_link_libraries(stream_analysis ${GSTREAMER_LIBRARIES})
+    target_compile_definitions(stream_analysis PRIVATE GSTREAMER_ENABLED)
+endif()
